adding new upstream version

--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,7 @@
 Source: haproxy
 Section: net
 Priority: optional
-Maintainer: Christo Buschek <crito@30loops.net>
-Uploaders: Arnaud Cornet <acornet@debian.org>
+Maintainer: Anthony Somerset <anthony@somersettechsolutions.co.uk>
 Standards-Version: 3.9.1
 Build-Depends: debhelper (>= 7.0.50~), libpcre3-dev, quilt (>= 0.46-7~), zlib1g-dev, libssl-dev
 Homepage: http://haproxy.1wt.eu/
